--- a/themes/octo/_config.yml
+++ b/themes/octo/_config.yml
@@ -16,7 +16,7 @@ social:
 sidebars:
   recent: true # boolean to display 10 most recent posts
   featured: false # boolean to list all posts with tag 'featured'
-  github: your_github # string to point to a Github profile | false to disable
+  github: qiugh # string to point to a Github profile | false to disable
 
 # Disqus comments
 disqus:
